# ncnn-android-styletransfer

./: README.md  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/styletransferncnn/: MainActivity.java  StyleTransferNcnn.java
app/src/main/jni/: CMakeLists.txt  styletransfer.id.h  styletransfer.param.bin.h  styletransferncnn_jni.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
